Actions
Bug #9388
closedlisten: this statement may fall through
Start date:
2018-03-28
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
issue found by gcc 7 build:
listen.c:958:6: error: this statement may fall through [-Werror=implicit-fallthrough=] error(E_SYS_ERROR, EXIT | NO_MSG); ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ listen.c:959:5: note: here case POLLHUP: ^~~~ listen.c:961:6: error: this statement may fall through [-Werror=implicit-fallthrough=] error(E_SYS_ERROR, EXIT | NO_MSG); ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ listen.c:962:5: note: here case POLLNVAL: ^~~~ listen.c:964:6: error: this statement may fall through [-Werror=implicit-fallthrough=] error(E_SYS_ERROR, EXIT | NO_MSG); ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ listen.c:965:5: note: here case POLLPRI: ^~~~ listen.c:967:6: error: this statement may fall through [-Werror=implicit-fallthrough=] error(E_SYS_ERROR, EXIT | NO_MSG); ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ listen.c:968:5: note: here case POLLOUT: ^~~~ listen.c:970:6: error: this statement may fall through [-Werror=implicit-fallthrough=] error(E_SYS_ERROR, EXIT | NO_MSG); ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ listen.c:971:5: note: here default: ^~~~~~~ listen.c: In function 'doevent': listen.c:1081:3: error: this statement may fall through [-Werror=implicit-fallthrough=] sys_error(E_POLL, EXIT); ^~~~~~~~~~~~~~~~~~~~~~~ listen.c:1083:2: note: here case T_LISTEN: ^~~~ nstoa.c:215:25: error: this statement may fall through [-Werror=implicit-fallthrough=] buf[len++] = '\v'; s++; ~^~ nstoa.c:217:4: note: here case '0': ^~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 25b601ca6246156206dbe2b37be633d695100eb0
commit 25b601ca6246156206dbe2b37be633d695100eb0 Author: Toomas Soome <tsoome@me.com> Date: 2018-04-23T16:15:39.000Z 9388 listen: this statement may fall through Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>
Actions